--- a/locale/cs/LC_MESSAGES/messages.po
+++ b/locale/cs/LC_MESSAGES/messages.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: 0.2.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-04-07 17:30+0200\n"
-"PO-Revision-Date: 2012-04-07 17:39+0100\n"
+"PO-Revision-Date: 2012-04-07 19:28+0100\n"
 "Last-Translator: rbas <rbas@rbas.cz>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: \n"
@@ -23,7 +23,7 @@ msgstr "Faktura"
 
 #: pdf.py:76
 msgid "Variable symbol: %s"
-msgstr "Variabilní symbol %s"
+msgstr "Variabilní symbol: %s"
 
 #: pdf.py:100
 msgid "Customer"
