--- a/InvoiceGenerator/locale/cs/LC_MESSAGES/messages.po
+++ b/InvoiceGenerator/locale/cs/LC_MESSAGES/messages.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: 0.2.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-04-07 17:30+0200\n"
-"PO-Revision-Date: 2012-04-21 12:48+0100\n"
+"PO-Revision-Date: 2012-04-22 14:33+0100\n"
 "Last-Translator: rbas <rbas@rbas.cz>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: \n"
@@ -85,7 +85,7 @@ msgstr "Celkem"
 
 #: pdf.py:208
 msgid "Total with tax"
-msgstr "Celkem s daní"
+msgstr "Celkem s DPH"
 
 #: pdf.py:225
 msgid "Creator"
