--- a/InvoiceGenerator/locale/cs/LC_MESSAGES/messages.po
+++ b/InvoiceGenerator/locale/cs/LC_MESSAGES/messages.po
@@ -1,17 +1,24 @@
+# #-#-#-#-#  messages.pot (PACKAGE VERSION)  #-#-#-#-#
+# SOME DESCRIPTIVE TITLE.
+# Copyright (C) YEAR ORGANIZATION
+# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+#
+# #-#-#-#-#  messages.po (0.2.0)  #-#-#-#-#
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
+#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: 0.2.0\n"
+"Project-Id-Version: 0.4.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-01-07 22:04+0100\n"
 "PO-Revision-Date: 2012-04-22 14:33+0100\n"
 "Last-Translator: rbas <rbas@rbas.cz>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"Language: CS\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -106,12 +113,12 @@ msgid "VAT rate"
 msgstr "Sazba"
 
 #: pdf.py:229
-msgid "Without VAT"
-msgstr "Bez DPH"
-
-#: pdf.py:229
 msgid "With VAT"
 msgstr "S DPH"
+
+#: pdf.py:229
+msgid "Without VAT"
+msgstr "Bez DPH"
 
 #: pdf.py:257
 msgid "Total with tax"
@@ -121,8 +128,8 @@ msgstr "Celkem s DPH"
 msgid "Creator"
 msgstr "Vytvořil"
 
-#: pdf.py:281
-msgid "Date of exposure"
+#: InvoiceGenerator/pdf.py:402
+msgid "Date of exposure taxable invoice"
 msgstr "Den vystavení daňového dokladu"
 
 #: pdf.py:282
@@ -151,3 +158,7 @@ msgstr "Opravný daňový doklad k daňovému dokladu: %s"
 #, python-format
 msgid "Reason to correction: %s"
 msgstr "Důvod opravy: %s"
+
+#: pdf.py:281
+msgid "Date of exposure"
+msgstr "Den vystavení dokladu"
