--- a/InvoiceGenerator/locale/cs/LC_MESSAGES/messages.po
+++ b/InvoiceGenerator/locale/cs/LC_MESSAGES/messages.po
@@ -9,20 +9,20 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: 0.5.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-09-22 15:04+0100\n"
-"PO-Revision-Date: 2014-09-22 15:14+0100\n"
+"PO-Revision-Date: 2015-02-17 00:18+0100\n"
 "Last-Translator: rbas <rbas@rbas.cz>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: CS\n"
+"Language: cs\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2\n"
+"Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
+"Language-Team: \n"
+"X-Generator: Poedit 1.7.4\n"
 
 #: api.py:47
 #, python-format
@@ -114,7 +114,7 @@ msgstr "Sazba"
 
 #: pdf.py:335
 msgid "Without VAT"
-msgstr ""
+msgstr "Bez DPH"
 
 #: pdf.py:335
 msgid "With VAT"
@@ -131,6 +131,9 @@ msgstr "Vytvořil"
 #: InvoiceGenerator/pdf.py:402
 msgid "Date of exposure taxable invoice"
 msgstr "Den vystavení daňového dokladu"
+
+msgid "Taxable invoice num.: %s"
+msgstr "Daňový doklad č.: %s"
 
 #: pdf.py:404 pdf.py:465
 msgid "Payback"
@@ -161,4 +164,4 @@ msgstr "Důvod opravy: %s"
 
 #: pdf.py:463
 msgid "Date of exposure"
-msgstr "Den vystavení dokladu"
+msgstr "Datum vystavení"
