--- a/InvoiceGenerator/locale/cs/LC_MESSAGES/messages.po
+++ b/InvoiceGenerator/locale/cs/LC_MESSAGES/messages.po
@@ -14,7 +14,7 @@ msgstr ""
 "Project-Id-Version: 0.5.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-09-22 15:04+0100\n"
-"PO-Revision-Date: 2015-02-17 00:18+0100\n"
+"PO-Revision-Date: 2015-06-22 20:04+0100\n"
 "Last-Translator: rbas <rbas@rbas.cz>\n"
 "Language: cs\n"
 "MIME-Version: 1.0\n"
@@ -22,7 +22,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
 "Language-Team: \n"
-"X-Generator: Poedit 1.7.4\n"
+"X-Generator: Poedit 1.5.4\n"
 
 #: api.py:47
 #, python-format
@@ -165,3 +165,6 @@ msgstr "Důvod opravy: %s"
 #: pdf.py:463
 msgid "Date of exposure"
 msgstr "Datum vystavení"
+
+msgid "Document num.: %s"
+msgstr "Doklad č.: %s"
